[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
[dependencies]
log = "0.4.22"
paste = "1.0.15"
buddy_system_allocator = "0.6"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.7.1"
